# egui-data-table

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: cargo-publish.yml  pages.yml
ai-docs/: WORKFLOW.md  _index.md  mental-model.md
ai-docs/spec/: clipboard-tsv.md  editing-selection-commands.md  i18n-examples-demo.md  persistence-validation.md  public-api.md  rendering-presentation.md
demo/: Cargo.toml  index.html
examples/: demo.rs  internationalization.rs  partially_editable.rs
src/: draw.rs  lib.rs  ui.rs  viewer.rs
src/draw/: body.rs  mod.rs  state.rs  tsv.rs
src/draw/state/: action.rs  clipboard.rs  command.rs  mod.rs  model_ops.rs  selection.rs  tests.rs  types.rs  validation.rs
src/ui/: viewer.rs
src/widgets/: mod.rs
