[package]
name = "egui-data-table"
version = "0.2.2"
edition = "2021"
repository = "https://github.com/kang-sw/egui-data-table"
authors = ["kang-sw"]
description = "A generic data table widget implmentation for egui"
categories = ["egui", "ui", "spreadsheet", "data-table"]
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["demo"]

[dependencies]
egui = "0.27"
egui_extras = { version = "0.27", default-features = false }
tap = "1"
itertools = "0.12"
serde = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
eframe = { version = "0.27", features = ["serde", "persistence"] }
fastrand = "2"
names = { version = "0.14", default-features = false }

[features]
default = ["persistency"]
persistency = ["dep:serde"]
