[package]
name = "egui-data-table"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/kang-sw/egui-data-table"
authors = ["kang-sw"]
description = "A generic data table widget implmentation for egui"
categories = ["gui"]
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["demo"]

[dependencies]
egui = "0.28"
egui_extras = { version = "0.28", default-features = false, features = [
    "serde",
] }
tap = "1"
itertools = "0.13"
serde = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
eframe = { version = "0.28", features = ["serde", "persistence"] }
fastrand = "2"
names = { version = "0.14", default-features = false }

[features]
default = ["persistency"]
persistency = ["dep:serde"]
