[package]
name = "egui-data-table"
version = "0.4.1"
edition = "2021"
repository = "https://github.com/kang-sw/egui-data-table"
authors = ["kang-sw"]
description = "A generic data table widget implmentation for egui"
categories = ["gui"]
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["demo"]

[dependencies]
egui = "0.29"
egui_extras = { version = "0.29", default-features = false, features = [
    "serde",
] }
tap = "1"
itertools = "0.13"
serde = { version = "1", optional = true, features = ["derive"] }
thiserror = "2"

[dev-dependencies]
eframe = { version = "0.29", features = ["serde", "persistence"] }
fastrand = "2"
names = { version = "0.14", default-features = false }
log = "0.4"
env_logger = "0.11.5"

[features]
default = ["persistency"]
persistency = ["dep:serde"]
