[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "demo"
path = "../examples/demo.rs"

[dependencies]
egui = "0.27"
egui_extras = { version = "0.27", default-features = false }
eframe = { version = "0.27", features = ["serde", "persistence"] }

egui-data-table = { path = ".." }

fastrand = "2"
names = { version = "0.14", default-features = false }
getrandom = { version = "0.2", features = ["js"] }

tap = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
